ajuste del menu y configuracion de las rutas Signed-off-by: Daniel Torres <dstorres2011@hotmail.com>

--- a/views/layout/navegacion.ejs
+++ b/views/layout/navegacion.ejs
@@ -3,10 +3,10 @@
 </div>
 <nav>
 	<ul class="nav nav-justified">
-		<li><a href="index.html">Inicio</a></li>
-		<li><a href="galeria.html">Galeria</a></li>
-		<li><a href="comedores.html">Comedores</a></li>
-		<li><a href="estadisticas.html">Mejores opciones</a></li>
-		<li><a href="contactanos.html">Contactos</a></li>
+		<li><a href="/">Inicio</a></li>
+		<li><a href="/galeria">Galeria</a></li>
+		<li><a href="/comedores">Comedores</a></li>
+		<li><a href="/estadisticas">Mejores opciones</a></li>
+		<li><a href="/contactanos">Contactos</a></li>
 	</ul>
 </nav>
