--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -14,18 +14,7 @@
 
   <body>
       <header class="masthead">
-        <div class="title text-center">
-          <h1 > Ayudantes Espol</h1>
-        </div>
-        <nav>
-            <ul class="nav nav-justified">
-              <li><a href="index.html">Inicio</a></li>
-              <li ><a href="galeria.html">Galeria</a></li>
-              <li><a href="comedores.html">Comedores</a></li>
-              <li><a href="estadisticas.html">Mejores opciones</a></li>
-              <li class="active"><a href="contactanos.html">Contactos</a></li>
-            </ul>
-        </nav>
+        <%- include layout/navegacion.ejs %>
       </header>
         
       <div class="container">
