--- a/views/estadisticas.ejs
+++ b/views/estadisticas.ejs
@@ -24,18 +24,7 @@
   <body> 
 
     <header class="masthead">
-      <div class="title text-center">
-        <h1 >Bar-Espol</h1>
-      </div>
-      <nav>
-            <ul class="nav nav-justified">
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="galeria.html">Galeria</a></li>
-              <li><a href="comedores.html">Comedores</a></li>
-              <li class="active"><a href="estadisticas.html">Mejores opciones</a></li>
-              <li><a href="contactanos.html">Contactos</a></li>
-            </ul>
-      </nav>
+      <%- include layout/navegacion.ejs %>
     </header>
         
     <div class="container">
