--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,6 @@
     <script src="js/tms_presets.js" type="text/javascript"></script>
     <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
     <script src="js/jquery.equalheights.js" type="text/javascript"></script>
-
-
     
   </head>
 
@@ -77,5 +75,5 @@ $(window).load(function () {
 });
 </script>
 
-
+<p>sadasdasdsdas</p>
   <%- include layout/footer.ejs %>
