act. de la galeria Signed-off-by: Daniel Torres <dstorres2011@hotmail.com>

--- a/views/comedores.ejs
+++ b/views/comedores.ejs
@@ -76,6 +76,4 @@
       <script src="js/ubicacion.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuKMTTgBEGbT5Ry3SNsBr2rUy2aLpb4Rw&callback=iniciarMapa"></script>
     
-    
-  </body>
-</html>
+  <%- include layout/footer.ejs %>
