--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -71,19 +71,6 @@
         </div>
       </div>
   
-     <footer>
-      <div class="footer text-center">
-        
-        <a href="https://https://www.facebook.com/poncho.pulido.5"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/Poncho_pulido08"><i class="fa fa-twitter"></i></a>
-        <br />
-        <small >
-          <p class="id_small">  © El contenido de esta obra es de propiedad intelectual de Alfonso Pulido, Melina Tomala, Daniel Torres y Carlos Garzon. </p>
-          <p class="id_small"> Todos los derechos reservados.Prohibida su reproducción total,parcial, comunicación </p>
-          <p class="id_small"> pública o distribución sin autorización previa del titular de los derechos</p>
-        </small>
-      </div>
-    </footer>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyA7Yrfta_LVUQiKOyH_Je--ujWNqjsPBEk"></script>
@@ -107,4 +94,4 @@
     </script>
 
   </body>
-</html>
+  <%- include layout/footer.ejs %>
