--- a/views/estadisticas.ejs
+++ b/views/estadisticas.ejs
@@ -87,18 +87,4 @@
 onclick="document.getElementById('ms').showModal()">Mostrar</button-->
 
     
-    <footer>
-      <div class="footer text-center">
-        
-        <a href="https://https://www.facebook.com/poncho.pulido.5"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/Poncho_pulido08"><i class="fa fa-twitter"></i></a>
-        <br />
-        <small >
-          <p class="id_small">  © El contenido de esta obra es de propiedad intelectual de Alfonso Pulido, Melina Tomala, Daniel Torres y Carlos Garzon. </p>
-          <p class="id_small"> Todos los derechos reservados.Prohibida su reproducción total,parcial, comunicación </p>
-          <p class="id_small"> pública o distribución sin autorización previa del titular de los derechos</p>
-        </small>
-      </div>
-    </footer>
-  </body>
-</html>
+  <%- include layout/footer.ejs %>
