--- a/views/galeria.ejs
+++ b/views/galeria.ejs
@@ -4,138 +4,124 @@
     <title>Comidas-Espol</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/estilo.css">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-
     <link href="galereya/css/jquery.galereya.css" rel="stylesheet"/>
+    <link href="galereya/css/jquery.galereya.css" rel="stylesheet"/>
+    
     <script src="galereya/js/jquery.galereya.js"></script>
-        <script src="galereya/js/jquery.galereya.min.js"></script>
-        <script>
-          $(function() {
-              $('#galleryherepls').galereya();
-          });
-      </script>
-
+    <script src="galereya/js/jquery.galereya.min.js"></script>
+    <script>
+      $(function() {
+        $('#galleryherepls').galereya();
+      });
+    </script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/estilo.css">
-  
-
+    
   </head>
 
   <body>
+    <section>
       <header class="masthead">
         <%- include layout/navegacion.ejs %>
       </header>
-
-      <div id="galleryherepls">
-          
-            <img src="gallery/photo-1.jpg"
-              alt="Bandera"
-                  title="Bandera"
-                  data-desc="Comedor FIMCP "
-                  data-category="Carne"
-                  data-fullsrc="gallery/photo-1.jpg" 
-                  />   
-                 
-               
-            <img src="gallery/photo-2.jpg"
-                alt="Seco de Pollo"
-                data-desc="Comedor FIEC"
-                data-fullsrc="gallery/photo-2.jpg"
-                data-category="Pollo"
-            />
-
-
-            <img src="gallery/photo-3.jpg"
-                alt="Arroz con menestra y chuleta"
-                data-desc="Comedor FCSH"
-                data-fullsrc="gallery/photo-3.jpg"
-                data-category="Carne"
-            />
-
-            <img src="gallery/photo-4.jpg"
-                alt="Asado Negro"
-                data-desc="Comedor existente en nuestros sueños"
-                data-fullsrc="gallery/photo-4.jpg"
-                data-category="Carne"
-            />
-            <img src="gallery/photo-5.jpg"
-                alt="Cangrejo "
-                data-desc="Comedor que nunca existirá"
-                data-category="Mariscos"
-                data-fullsrc="gallery/photo-5.jpg"/>
+      <div class="container">
+        <div id="galleryherepls">
             
-            <img src="gallery/photo-6.jpg"
-                alt="Pescado apanado"
-                data-desc="Comedor CELEX"
+              <img src="gallery/photo-1.jpg"
+                alt="Bandera"
+                    title="Bandera"
+                    data-desc="Comedor FIMCP "
+                    data-category="Carne"
+                    data-fullsrc="gallery/photo-1.jpg" 
+                    />   
+                   
+                 
+              <img src="gallery/photo-2.jpg"
+                  alt="Seco de Pollo"
+                  data-desc="Comedor FIEC"
+                  data-fullsrc="gallery/photo-2.jpg"
+                  data-category="Pollo"
+              />
+
+
+              <img src="gallery/photo-3.jpg"
+                  alt="Arroz con menestra y chuleta"
+                  data-desc="Comedor FCSH"
+                  data-fullsrc="gallery/photo-3.jpg"
+                  data-category="Carne"
+              />
+
+              <img src="gallery/photo-4.jpg"
+                  alt="Asado Negro"
+                  data-desc="Comedor existente en nuestros sueños"
+                  data-fullsrc="gallery/photo-4.jpg"
+                  data-category="Carne"
+              />
+              <img src="gallery/photo-5.jpg"
+                  alt="Cangrejo "
+                  data-desc="Comedor que nunca existirá"
+                  data-category="Mariscos"
+                  data-fullsrc="gallery/photo-5.jpg"/>
+              
+              <img src="gallery/photo-6.jpg"
+                  alt="Pescado apanado"
+                  data-desc="Comedor CELEX"
+                  data-category="Mariscos"
+                  data-fullsrc="gallery/photo-6.jpg"
+              />
+
+              <img src="gallery/photo-7.jpg"
+                alt="Bistec de Pescado"
+                title="Bistec de Pescado"
+                data-desc="Comedor FIEC"
                 data-category="Mariscos"
-                data-fullsrc="gallery/photo-6.jpg"
-            />
+                data-fullsrc="gallery/photo-7.jpg" />
 
-            <img src="gallery/photo-7.jpg"
-              alt="Bistec de Pescado"
-              title="Bistec de Pescado"
-              data-desc="Comedor FIEC"
-              data-category="Mariscos"
-              data-fullsrc="gallery/photo-7.jpg" />
-
-               <img src="gallery/photo-8.jpg"
-              alt="Tallarin Especial"
-              title="Tallarin Especial"
-              data-desc="Comedor del Chino"
-              data-category="Carne"
-              data-fullsrc="gallery/photo-8.jpg" />
+                 <img src="gallery/photo-8.jpg"
+                alt="Tallarin Especial"
+                title="Tallarin Especial"
+                data-desc="Comedor del Chino"
+                data-category="Carne"
+                data-fullsrc="gallery/photo-8.jpg" />
 
 
-               <img src="gallery/photo-9.jpg"
-              alt="Chuleta y Carne"
-              title="Mixto"
-              data-desc="Comedor FIMCP"
-              data-category="Carne"
-              data-fullsrc="gallery/photo-9.jpg" />
+                 <img src="gallery/photo-9.jpg"
+                alt="Chuleta y Carne"
+                title="Mixto"
+                data-desc="Comedor FIMCP"
+                data-category="Carne"
+                data-fullsrc="gallery/photo-9.jpg" />
 
 
-               <img src="gallery/photo-10.jpg"
-              alt="Pescado Frito"
-              title="Pescado Frito"
-              data-desc="Comedor EDCOM"
-              data-category="Mariscos"
-              data-fullsrc="gallery/photo-10.jpg" />
+                 <img src="gallery/photo-10.jpg"
+                alt="Pescado Frito"
+                title="Pescado Frito"
+                data-desc="Comedor EDCOM"
+                data-category="Mariscos"
+                data-fullsrc="gallery/photo-10.jpg" />
 
 
-               <img src="gallery/photo-11.jpg"
-              alt="Bolón de Tere"
-              title="Bolón de Tere"
-              data-desc="Comedor de Tere"
-              data-category="Carne"
-              data-fullsrc="gallery/photo-11.jpg" />
+                 <img src="gallery/photo-11.jpg"
+                alt="Bolón de Tere"
+                title="Bolón de Tere"
+                data-desc="Comedor de Tere"
+                data-category="Carne"
+                data-fullsrc="gallery/photo-11.jpg" />
 
 
-               <img src="gallery/photo-12.jpg"
-              alt="Ceviche de Concha"
-              title="Ceviche de Concha"
-              data-desc="Comedor Montañita"
-              data-category="Mariscos"
-              data-fullsrc="gallery/photo-12.jpg" />
-
-        </div> 
-    </div>
-
-<!-- ARREGLAR FOOTER -->
-<!--      <footer>
-      <div class="footer text-center">
-        
-        <a href="https://https://www.facebook.com/poncho.pulido.5"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/Poncho_pulido08"><i class="fa fa-twitter"></i></a>
-        <br />
-        <small >
-          <p class="id_small">  © El contenido de esta obra es de propiedad intelectual de Alfonso Pulido, Melina Tomala, Daniel Torres y Carlos Garzon. </p>
-          <p class="id_small"> Todos los derechos reservados.Prohibida su reproducción total,parcial, comunicación </p>
-          <p class="id_small"> pública o distribución sin autorización previa del titular de los derechos</p>
-        </small>
+                 <img src="gallery/photo-12.jpg"
+                alt="Ceviche de Concha"
+                title="Ceviche de Concha"
+                data-desc="Comedor Montañita"
+                data-category="Mariscos"
+                data-fullsrc="gallery/photo-12.jpg" />
+          </div> 
       </div>
-    </footer> -->
+    </section>
+    
 
-  </body>
-</html>
+        
+  <%- include layout/footer.ejs %>
