Actualizacion Signed-off-by: Daniel Torres <dstorres2011@hotmail.com>

--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Ayudantes-Espol</title>
+    <title>BAR-Espol</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -9,7 +9,9 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/estilo.css">
-
+    <link rel="stylesheet" href="css/index_secundario.css">
+    <link href="css/ubicacion.css" rel="stylesheet">    
+    <link rel="stylesheet" href="css/fooder.css">
   </head>
 
   <body>
@@ -28,7 +30,7 @@
                       <div class="well well-sm">
                         <form class="form-horizontal" method="post">
                           <fieldset>
-                            <legend class="text-center header">Cont&aacutectanos</legend>
+                            <legend class="text-center">Cont&aacutectanos</legend>
                             <div class="col-md-4">
                               
                               <div class="form-group">
