--- a/views/layout/navegacion.ejs
+++ b/views/layout/navegacion.ejs
@@ -1,12 +1,35 @@
-<div class="title text-center">
-	<h1 >Bar Espol</h1>
+ <header>
+  <div class="container header inner">
+	  <nav class="navbar">
+	    <div class="container">
+	      <div class="navbar-header">
+	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>                        
+	        </button>
+	        <a class="navbar-brand" href="/">Bar Espol</a>
+	      </div>
+	      <div class="collapse navbar-collapse" id="myNavbar">
+	        <ul class="nav navbar-nav navbar-right masthead-nav">
+	          <li><a href="/galeria">Galeria</a></li>
+	          <li><a href="/comedores">Comedores</a></li>
+	          <li><a href="/estadisticas">Mejores opciones</a></li>
+	          <li><a href="/contactanos">Contactos</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </nav>
+  </div>
+</header>
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+  <a href="#">Acerca De</a>
+  <a href="/comedores">Comedores Facultad</a>
+  <a href="/estadisticas">Estadisticas</a>
+  <a href="/contactanos">Contactos</a>
+  <a href="/salir">Salir</a>
 </div>
-<nav>
-	<ul class="nav nav-justified">
-		<li><a href="/">Inicio</a></li>
-		<li><a href="/galeria">Galeria</a></li>
-		<li><a href="/comedores">Comedores</a></li>
-		<li><a href="/estadisticas">Mejores opciones</a></li>
-		<li><a href="/contactanos">Contactos</a></li>
-	</ul>
-</nav>
+
+<span style="font-size:30px;cursor:pointer;float:right;color:#fff;position:absolute;top:5%;right: 10px;" onclick="openNav()">☰</span>
+
