--- a/views/comedores.ejs
+++ b/views/comedores.ejs
@@ -1,74 +1,76 @@
 <!Doctype html>
 <html lang="es">
   <head>
-     <title>Ubicacion</title>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <title>Ubicacion</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index_secundario.css">
+    <link href="css/ubicacion.css" rel="stylesheet">    
+    <link rel="stylesheet" href="css/fooder.css">
 
-    <link href="css/estilo.css" rel="stylesheet">
-    <link href="css/ubicacion.css" rel="stylesheet">
   </head>
   
 
   <body>
-    <header class="masthead">
         <%- include layout/navegacion.ejs %>
-      </header>
-
-    <div class="main">
-      <div id="encabezado">
-        <!--<h1> Conoce tus opciones </h1>
-        <h3> COMEDORES DE LA ESPOL </h3>-->
-      </div>
-      <div id="cont-bares">
-        <h3> <FONT FACE="impact" SIZE=6 COLOR="red">COMEDORES DE LA ESPOL </FONT></h3>
-        <div id="list-comed" class="col-md-3 list-group">
-            
-            <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1435504,-79.962101, 'Comedor de Neo');">
-                <img src="img/facultades/edcom.png" alt="p">
-                <h4 class="list-group-item-heading">Comedor EDCOM</h4>
-                <p class="list-group-item-text">Almuerzo: </p><span> 
-                Arroz con menestra y patacones con pollo a la parrilla<br />
-                 </span>
-              </a> 
-            <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1435504,-79.962101, 'Comedor de Neo');">
-                <img src="img/facultades/fcnm.png" alt="p">
-                <h4 class="list-group-item-heading">Comedor FCNM</h4>
-                <p class="list-group-item-text">Almuerzo: </p><span> 
-                Arroz con menestra y patacones con pollo a la parrilla<br />
-                 </span>
-            </a>
-
-            <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1450,-79.966, 'Comedor Coca Cola');">
-                <img src="img/facultades/fiec.png" alt="p">
-                <h4 class="list-group-item-heading">Comedor FIEC</h4>
-                <p class="list-group-item-text">Almuerzo: </p><span> 
-                Sopa de Papa<br />
-                Arroz con medallones de mortadela</span>
-              </a>
-            <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.147,-79.9681, 'Comedor de FCSH');">
-                <img src="img/facultades/fcsh.png" alt="p">
-                <h4 class="list-group-item-heading">Comedor de FCSH</h4>
-                <p class="list-group-item-text">Almuerzo: </p><span> 
-                Locro de nabo<br />
-                Arroz con pollo a la coca cola y ensalada de lechuga </span>
-              </a>
-            <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1449503,-79.966154, 'Comedor de FIMCP');">
-                <img src="img/facultades/fimcp.png" alt="p">
-                <h4 class="list-group-item-heading">Comedor de FIMCP</h4>
-                <p class="list-group-item-text">Almuerzo: </p><span> 
-                Batido de Guineo<br />
-                acompañado de una super cúbica </span>
-              </a>  
+  
+    <section>
+      <div class="main">
+        <div id="encabezado">
+          <!--<h1> Conoce tus opciones </h1>
+          <h3> COMEDORES DE LA ESPOL </h3>-->
         </div>
-        <div id="pos-comed" class="col-md-8">
-          <div id="mapa-comedores" style="width:100%;height:400px;"></div>
+        <div id="cont-bares">
+          <h3> <FONT FACE="impact" SIZE=6 COLOR="red">COMEDORES DE LA ESPOL </FONT></h3>
+          <div id="list-comed" class="col-md-3 list-group">
+              
+              <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1435504,-79.962101, 'Comedor de Neo');">
+                  <img src="images/facultades/edcom.png" alt="p">
+                  <h4 class="list-group-item-heading">Comedor EDCOM</h4>
+                  <p class="list-group-item-text">Almuerzo: </p><span> 
+                  Arroz con menestra y patacones con pollo a la parrilla<br />
+                   </span>
+                </a> 
+              <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1435504,-79.962101, 'Comedor de Neo');">
+                  <img src="images/facultades/fcnm.png" alt="p">
+                  <h4 class="list-group-item-heading">Comedor FCNM</h4>
+                  <p class="list-group-item-text">Almuerzo: </p><span> 
+                  Arroz con menestra y patacones con pollo a la parrilla<br />
+                   </span>
+              </a>
+
+              <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1450,-79.966, 'Comedor Coca Cola');">
+                  <img src="images/facultades/fiec.png" alt="p">
+                  <h4 class="list-group-item-heading">Comedor FIEC</h4>
+                  <p class="list-group-item-text">Almuerzo: </p><span> 
+                  Sopa de Papa<br />
+                  Arroz con medallones de mortadela</span>
+                </a>
+              <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.147,-79.9681, 'Comedor de FCSH');">
+                  <img src="images/facultades/fcsh.png" alt="p">
+                  <h4 class="list-group-item-heading">Comedor de FCSH</h4>
+                  <p class="list-group-item-text">Almuerzo: </p><span> 
+                  Locro de nabo<br />
+                  Arroz con pollo a la coca cola y ensalada de lechuga </span>
+                </a>
+              <a href="#pos-comed" class="list-group-item comedor-tk" onclick="return selecComed(-2.1449503,-79.966154, 'Comedor de FIMCP');">
+                  <img src="images/facultades/fimcp.png" alt="p">
+                  <h4 class="list-group-item-heading">Comedor de FIMCP</h4>
+                  <p class="list-group-item-text">Almuerzo: </p><span> 
+                  Batido de Guineo<br />
+                  acompañado de una super cúbica </span>
+                </a>  
+          </div>
+          <div id="pos-comed" class="col-md-8">
+            <div id="mapa-comedores" style="width:100%;height:400px;"></div>
+          </div>
         </div>
       </div>
-      
-    </div>
+    </section>
+    
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -76,4 +78,5 @@
       <script src="js/ubicacion.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuKMTTgBEGbT5Ry3SNsBr2rUy2aLpb4Rw&callback=iniciarMapa"></script>
     
-  <%- include layout/footer.ejs %>
+  </body>
+</html>
