--- a/views/estadisticas.ejs
+++ b/views/estadisticas.ejs
@@ -5,16 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index_secundario.css">
+    <link href="css/ubicacion.css" rel="stylesheet">    
+    <link rel="stylesheet" href="css/fooder.css">
+
+
     
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyA7Yrfta_LVUQiKOyH_Je--ujWNqjsPBEk"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/aula.css">
-    <script type="text/javascript" src="js/js_mapa.js"></script>
     <script type="text/javascript" src="js/vue-chartkick.js"></script>
 
 
