--- a/views/galeria.ejs
+++ b/views/galeria.ejs
@@ -4,29 +4,29 @@
     <title>Comidas-Espol</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="css/estilo.css">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link href="galereya/css/jquery.galereya.css" rel="stylesheet"/>
-    <link href="galereya/css/jquery.galereya.css" rel="stylesheet"/>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     
+    <link href="galereya/css/jquery.galereya.css" rel="stylesheet"/>
+    <link href="galereya/css/jquery.galereya.css" rel="stylesheet"/>
     <script src="galereya/js/jquery.galereya.js"></script>
     <script src="galereya/js/jquery.galereya.min.js"></script>
+    <link rel="stylesheet" href="css/index_secundario.css">
+   
     <script>
       $(function() {
         $('#galleryherepls').galereya();
       });
     </script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
+
     
   </head>
 
   <body>
+    <%- include layout/navegacion.ejs %>
     <section>
-      <header class="masthead">
-        <%- include layout/navegacion.ejs %>
-      </header>
+        
       <div class="container">
         <div id="galleryherepls">
             
@@ -121,7 +121,6 @@
           </div> 
       </div>
     </section>
-    
 
-        
-  <%- include layout/footer.ejs %>
+  </body>
+</html>
