--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,75 +4,71 @@
     <title>Bar-Espol</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/reset.css" >
-    <link rel="stylesheet" href="css/style.css" >
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    
-    
-    <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-    <script src="js/tms-0.3.js" type="text/javascript"></script>
-    <script src="js/tms_presets.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="js/jquery.equalheights.js" type="text/javascript"></script>
-    
+    <script src="js/index.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/fooder.css">
+
   </head>
 
   <body>
-   
-    <header class="masthead">
-      <%- include layout/navegacion.ejs %>
-      <div class="row-bot-bg">
-        <div class="main">
-          <h2>BAR ESPOL <span>  COMUNIDAD POLITÉCNICA</span></h2>
-          <div class="slider-wrapper">
-            <div class="slider">
-              <ul class="items">
-                <li> <img src="images/slider-img1.jpg" alt="" /> </li>
-                <li> <img src="images/slider-img2.jpg" alt="" /> </li>
-                <li> <img src="images/slider-img3.jpg" alt="" /> </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-    <section id="content">
-      <div class="wrapper">
-        <div class="wrapper img-indent-bot">
-          <div class="col-1"> <a href="#"><img class="img-border" src="images/banner-1.jpg" alt=""></a> </div>
-          <div class="col-1"> <a href="#"><img class="img-border" src="images/banner-2.jpg" alt=""></a> </div>
-          <div class="col-2"> <a href="#"><img class="img-border" src="images/banner-3.jpg" alt=""></a> </div>
-        </div>
-
-            <h3> Nuestra Página ofrece </h3>
-            <ul class="list-1">
-              <li><a href="#">Una Galeria donde podras conocer la variedad de platos existentes en el mundo menos en ESPOL</a></li>
-              <li><a href="#">Las estadísticas de los platos más pedidos en la universidad </a></li>
-              <li><a href="#">Información para que puedas contactarnos</a></li>
-              <li><a href="#">Información de las respectivas Facultades con sus comedores y la Ubicación de cada uno de ellos</a></li>
-              <li><a href="#">La Línea de Tiempo con Información del Menú semanal Politécnico</a></li>
-                
-            </ul>
-        
-      </div>
+    <%- include layout/navegacion.ejs %>
+    
+    <div class="container-fluid tabSlider">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
       
-    </section>
+          <ul class="nav nav-pills nav-justified ">
+            <li data-target="#myCarousel" data-slide-to="0"><a href="#"><i class="fa fa-truck fa-2x col-sm-12"></i>Galletas</a></li>
+            <li data-target="#myCarousel" data-slide-to="1"><a href="#"><i class="fa fa-ship fa-2x col-sm-12"></i>Mariscos</a></li>
+            <li data-target="#myCarousel" data-slide-to="2"><a href="#"><i class="fa fa-building fa-2x col-sm-12"></i>Tipicos</a></li>
+            <li data-target="#myCarousel" data-slide-to="3"><a href="#"><i class="fa fa-building fa-2x col-sm-12"></i>Tartas</a></li>
+          </ul>
+
+
+   
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+        
+          <div class="item active">
+            <img src="images/Galletas.jpg" width="100%;">
+             <div class="carousel-caption">
+              <h3>Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
+            </div>
+          </div><!-- End Item -->
+   
+           <div class="item">
+            <img src="images/mariscos.jpg" width="100%;">
+             <div class="carousel-caption">
+              <h3>Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
+            </div>
+          </div><!-- End Item -->
           
-<script type="text/javascript">
-$(window).load(function () {
-    $('.slider')._TMS({
-        duration: 1000,
-        easing: 'easeOutQuint',
-        preset: 'slideDown',
-        slideshow: 7000,
-        banners: false,
-        pauseOnHover: true,
-        pagination: true,
-        pagNums: false
-    });
-});
-</script>
+          <div class="item">
+            <img src="images/tarta.jpg" width="100%;">
+             <div class="carousel-caption">
+              <h3>Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
+            </div>
+          </div><!-- End Item -->
+          
+          <div class="item">
+            <img src="images/tipica.jpg" width="100%;">
+             <div class="carousel-caption">
+              <h3>Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+            </div>
+          </div><!-- End Item -->
+                  
+        </div><!-- End Carousel Inner -->
+
+
+    </div>
+    </div>
+
 
 <%- include layout/footer.ejs %>
