login Signed-off-by: Daniel Torres <dstorres2011@hotmail.com>

--- a/views/login_inicial.ejs
+++ b/views/login_inicial.ejs
@@ -9,13 +9,15 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="css/login.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/index_secundario.css">
+    <link rel="stylesheet" href="css/fooder.css">
 
 
   </head>
 <body>
       <header class="masthead">
         <div class="title text-center">
-          <h1 > Bar Espol </h1>
+         <p>Bar Espol  -  Login</p> 
         </div>
       </header>
 		
@@ -25,7 +27,7 @@
       <span class="glyphicon glyphicon-user"></span>
     </div>
 
-      <form action="index.ejs" method="post" name="FormEntrar" onSubmit="return login()">
+      <form action="index" method="post" name="FormEntrar" onSubmit="return login()">
         <div class="input-group input-group-lg">
           <span class="input-group-addon" id="sizing-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
           <input type="email" class="form-control" name="correo" placeholder="Correo" id="correo">
